fixed: accepted all import details
